--- a/Web/main/templates/team.html
+++ b/Web/main/templates/team.html
@@ -6,7 +6,7 @@
     <img src="{% static 'img/nikitos.jpg' %}" alt='Никита'>
     <div class='moreInfo'>
         <h1 class='workerName'>Никита</h1>
-        <p class='workerInfo'>Наш программист, помогал создавать внешний вид. Вот настолько но крут</p>
+        <p class='workerInfo'>Наш программист, помогал создавать внешний вид. Вот настолько он крут</p>
     </div>
 </div>
 <div class='card'>
