--- a/Web/main/templates/base.html
+++ b/Web/main/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
+    {% block imports %}{% endblock imports %}
+    
     <title>Фото нашего сына</title>
 </head>
 <body>
