--- a/Web/main/templates/team.html
+++ b/Web/main/templates/team.html
@@ -8,21 +8,21 @@
 {% block content %}
 <div class='teamContainer'>
 <div class='card'>
-    <img src="{% static 'img/nikitos.jpg' %}" alt='Никита'>
+    <img src="{% static 'img/nikitos.jpg' %}" alt='Никита' draggable="false">
     <div class='moreInfo'>
         <h1 class='workerName'>Никита</h1>
         <p class='workerInfo'>Наш программист, помогал создавать внешний вид. Вот настолько он крут</p>
     </div>
 </div>
 <div class='card'>
-    <img src="{% static 'img/yaros.jpg' %}" alt='Ярослав'>
+    <img src="{% static 'img/yaros.jpg' %}" alt='Ярослав' draggable="false">
     <div class='moreInfo'>
         <h1 class='workerName'>Ярослав</h1>
         <p class='workerInfo'>Наш программист, он тоже делал внешний вид. Возможно фронт это очень полезно</p>
     </div>
 </div>
 <div class='card'>
-    <img src="{% static 'img/ivanos.jpg' %}" alt='Иван'>
+    <img src="{% static 'img/ivanos.jpg' %}" alt='Иван' draggable="false">
     <div class='moreInfo'>
         <h1 class='workerName'>Иван</h1>
         <p class='workerInfo'>Наш программист, он написал весь бекэнд. Он слишком крут, но и настолько же несчастен</p>
@@ -30,7 +30,7 @@
 </div>
 
 <div class='card'>
-    <img src="{% static 'img/leshos.jpg' %}" alt='Алексей'>
+    <img src="{% static 'img/leshos.jpg' %}" alt='Алексей' draggable="false">
     <div class='moreInfo'>
         <h1 class='workerName'>Алексей</h1>
         <p class='workerInfo'>Наш дизайнер. Он отвечает за крутость внешнего вида. Спасибо ему за детство</p>
