--- a/Web/main/templates/base.html
+++ b/Web/main/templates/base.html
@@ -12,9 +12,16 @@
 <body>
     <header>
     <div class='MegaFoot'>
-        <div  class='left_footer'><a class='FooterText' href='/'>Фото нашего сына    </a> <span class='another_text'>Теперь в Django</span></div>
-        <div class='right_footer'><span class='exit'> Выйти</span></div>
+        <div  class='left_footer'><a class='FooterText' href='/'><b>Фото нашего сына</b>    </a> <span class='another_text'><i><p>ТЕПЕРЬ в Django</p></i></span></div>
+        <div class='right_footer'>
+            <ul>
+                <li> <a href='/'>Главная</a> </li>
+                <li> <a href='/team/'>Команда</a> </li>
+                <li> <a href=''>Ваши фотографии</a> </li>
+            </ul>
     </div>
+    </div>
+    <div class='white_shit'></div>
     </header>
 
     <div class='MainText'>
