--- a/Web/main/templates/base.html
+++ b/Web/main/templates/base.html
@@ -31,19 +31,12 @@
     <footer>
         <div class='MegaHead'>
             <div  class='HeaderMain'>
-                <a class='HeaderText'>Фото нашего сына</a> 
-                <div class='quote_centre'><span class='motivation_text'><span class='quote'>&rdquo;</span><i>Все везде и сразу</i><span class='quote'>&rdquo;</span></span></div>
-                <div class='header_navigation'>
-                    <ul>
-                        <li> <a href='/'>Главная</a> </li>
-                        <li> <a href='/team/'>Команда</a> </li>
-                        <li> <a href=''>Ваши фотографии</a> </li>
-    
-                    </ul>
-                </div>
+                <a class='HeaderText'><b>ФОТО НАШЕГО СЫНА</b></a> 
+                <div class='quote_centre'><span class='motivation_text'><i>«Все везде и сразу»</i></span></span></div>
             </div>
         </div>
-        <div class='HeaderBottom'><span class='date'>Все было сделано в &copy; 2024 </span><span class='company_name'>Фотоаппарат вашей дочери</span></div>
+        
+        <div class='HeaderBottom'><div class='make_centre'></div><span class='date'>Все было сделано в 2024</span><span class='company_name'>Фотоаппарат вашей дочери</span></div>
 
     </footer>
 </body>
