--- a/Web/main/static/css/base.css
+++ b/Web/main/static/css/base.css
@@ -38,12 +38,17 @@ a{text-decoration: none;}
 .right_footer{
     justify-content: flex-end; 
     margin-top: 20pt; 
-    margin-right: 10pt;}
+    margin-right: 8%;}
 
 .right_footer ul{
+        
         display: flex;
         justify-content: center;
         list-style-type: none;
+}
+
+.right_footer ul li{
+    position: relative;
 }
 
 
@@ -169,6 +174,27 @@ footer{
     animation: fade 1s forwards;
 }
 
+
+.right_footer ul li ul.dropdown_user_menu{
+    position: absolute;
+    left: 0;
+    width: 180px;
+    flex-direction: column;
+    background-color: #8f3985;
+    display: none;
+}
+.right_footer ul li ul.dropdown_user_menu li{
+    width: 100%;
+    text-align: center;
+    border: 1px solid rgba(0,0,0,.3);
+    
+}
+
+.right_footer ul li:hover ul.dropdown_user_menu{
+    display: block;
+}
+
+
 @media (max-width:700px) {
     .header_navigation ul{
         flex-direction: column;
@@ -180,6 +206,10 @@ footer{
     }
     
 }
+
+
+
+
 
 @keyframes fade {
     from{
