--- a/Web/main/templates/base.html
+++ b/Web/main/templates/base.html
@@ -15,10 +15,17 @@
         <div  class='left_footer'><a class='FooterText' href='/'><b>Фото нашего сына</b>    </a> <span class='another_text'><i><p>ТЕПЕРЬ в Django</p></i></span></div>
         <div class='right_footer'>
             <ul>
-                <li> <a href='/'>Главная</a> </li>
+                <li> <a href='/create_cookie/'>Главная</a> </li>
                 <li> <a href='/team/'>Команда</a> </li>
                 {% if user_login %}
-                <li> <a href=''>{{ user_login }}</a> </li>
+                <li> 
+                    <a href='#'>{{ user_login }}</a> 
+                    <ul class='dropdown_user_menu'>
+                        <li><a href='#'>помогите</a></li>
+                        <li><a href='#'>настройки</a></li>
+                        <li><a href='#'>выход</a></li>
+                    </ul>
+                </li>
                 {% else %}
                 <li> <a href='/welcome/'>Регистрация</a> </li>
 
