Add registration (View, Html)

--- a/Web/main/templates/base.html
+++ b/Web/main/templates/base.html
@@ -27,7 +27,7 @@
                     </ul>
                 </li>
                 {% else %}
-                <li> <a href='/welcome/'>Регистрация</a> </li>
+                <li> <a href='/register/'>Регистрация</a> </li>
 
                 {% endif %}
                 
