--- a/Web/main/templates/base.html
+++ b/Web/main/templates/base.html
@@ -15,7 +15,7 @@
         <div  class='left_footer'><a class='FooterText' href='/'><b>Фото нашего сына</b>    </a> <span class='another_text'><i><p>ТЕПЕРЬ в Django</p></i></span></div>
         <div class='right_footer'>
             <ul>
-                <li> <a href='/create_cookie/'>Главная</a> </li>
+                <li> <a href='/'>Главная</a> </li>
                 <li> <a href='/team/'>Команда</a> </li>
                 {% if user.is_authenticated %}
                 <li> 
