--- a/Web/main/templates/login.html
+++ b/Web/main/templates/login.html
@@ -6,7 +6,7 @@
 
 {% block imports %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/team_new.css' %}" />
-<script src="{% static "js/shit.js" %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}" />
 {% endblock imports %}
 {% block content %}
 
