--- a/Web/main/templates/base.html
+++ b/Web/main/templates/base.html
@@ -22,7 +22,7 @@
                     <a href='#'>{{ user_login }}</a> 
                     <ul class='dropdown_user_menu'>
                         <li><a href='#'>помогите</a></li>
-                        <li><a href='#'>настройки</a></li>
+                        <li><a href='/settings/'>настройки</a></li>
                         <li><a href='#'>выход</a></li>
                     </ul>
                 </li>
